# grid-doctor

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
docs/: getting-started.md  index.md  technical-decisions.md  waterpark.md
docs/api/: cli.md  grid_doctor.md  helpers.md  log.md  remap.md  utils.md
docs/assets/: styles.css
docs/recipes/: icon.md  index.md  structured.md
scripts/cmip6/: README.md  convert.py  requirements.txt
scripts/eerie/: .nfseea45c0a15dc43c500000039  README.md  convert.py  inspect_plot.ipynb  regrid_hist-1950.ipynb  regrid_ssp245.ipynb  remap_numba_helpers.py  remap_zarr_helpers.py  requirements.txt
scripts/eerie/rechunker_configs/: configs.txt  rechunker.eerie-future-ssp245-v20240618.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_0.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_1.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_2.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_3.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_4.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_5.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_6.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_7.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_8.zarr.yaml  rechunker.eerie-future-ssp245-v20240618_P1M_mean_9.zarr.yaml  rechunker.eerie-hist-1950-v20240618.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_0.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_1.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_2.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_3.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_4.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_5.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_6.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_7.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_8.zarr.yaml  rechunker.eerie-hist-1950-v20240618_P1M_mean_9.zarr.yaml
scripts/era5/: README.md  convert.py  slurm.sh
scripts/icdc/: README.md  __init__.py  __main__.py  base.py  core.py
scripts/icdc/atmosphere/: ascat.py  bnsc.py  crutem.py  ecad.py  hoaps.py  imerg.py  modis.py  mswep.py
scripts/icdc/reanalysis/: ncep.py
scripts/icon-dream/: README.md  convert.py  convert_gh.py  requirements.txt  requirements.yml  submit.slurm  submit_slurm_pipeline.sh
scripts/icon-dream/icon_dream_reflow_helpers/: __init__.py  common.py  planning.py  publish.py  transform.py
scripts/nextgems/: cleanTheBucket.py  copyGroup_S3.py  daskRechunking.ipynb  daskTransfer.ipynb  rechunkTest1.ipynb
scripts/orcestra/: Write_ORCESTRA_to_S3.ipynb
src/grid_doctor/: __init__.py  __init__.pyi  helpers.py  log.py  remap.py  remap_apply.py  remap_backend.py  s3.py  types.py  utils.py
src/grid_doctor/cli/: __init__.py  parser.py  script_utils.py
tests/: conftest.py  helpers.py  testTransferToS3.py  test_helpers.py  test_icdc.py  test_log.py  test_public_api.py  test_regrid.py  test_remap.py  test_remap_apply.py  test_remap_weight_application.py  test_s3.py  test_s3_and_cli.py  test_utils.py
