[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "grid-doctor"
version = "0.1.0"
description = "Convert lat/lon xarray datasets to HEALPix pyramids and save to S3. Your lat/lon data goes to rehab and comes out HEALed."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "DKRZ", email = "data@dkrz.de"},
]
maintainers = [
    {name = "DKRZ", email = "data@dkrz.de"},
]
keywords = [
    "healpix",
    "xarray",
    "zarr",
    "geospatial",
    "regridding",
    "climate",
    "earth-observation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "xarray",
    "healpy",
    "zarr",
    "s3fs",
    "fsspec",
    "dask[array]",
    "data-portal-worker @ git+https://github.com/freva-org/freva-nextgen.git@zarr-aggregation#subdirectory=freva-data-portal-worker",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "black>=23.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]
all = [
    "grid-doctor[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/freva-org/grid-doctor"
Repository = "https://github.com/freva-org/grid-doctor"

[tool.mypy]
files = "freva-*/src"
strict = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
install_types = true
non_interactive = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
ignore_missing_imports = true
allow_untyped_calls = true

[tool.isort]
known_first_party = [
    "freva_rest",
    "freva_client",
    "freva_data_portal",
    "data_portal_worker",
    "databrowser_api",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=grid_doctor --cov-report=term-missing"

[tool.coverage.run]
source = ["grid-doctor"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
