[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "grid-doctor"
description = "Convert lat/lon xarray datasets to HEALPix pyramids and save to S3. Your lat/lon data goes to rehab and comes out HEALed."
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "DKRZ", email = "data@dkrz.de"},
]
maintainers = [
    {name = "DKRZ", email = "data@dkrz.de"},
]
keywords = [
    "healpix",
    "xarray",
    "zarr",
    "geospatial",
    "regridding",
    "climate",
    "earth-observation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "xarray",
    "requests",
    "healpix-geo",
    "zarr",
    "s3fs",
    "scipy",
    "fsspec",
    "numcodecs",
    "dask[array]",
    "numba"
]


[project.optional-dependencies]
gpu = ["cupy"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "black>=23.0",
    "pre-commit>=3.0",
    "types-requests",
]
tests = [
    "pytest",
    "pytest-env",
    "mock",
    "pytest-mock",
    "pytest-cov",
    "pytest-pythonpath",
    "healpy",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.0",
    "mkdocs-material[imaging]",
    "pillow",
]
all = [
    "grid-doctor[dev,tests,docs]",
]

[project.urls]
Homepage = "https://github.com/freva-org/grid-doctor"
Repository = "https://github.com/freva-org/grid-doctor"

[tool.mypy]
files = "freva-*/src"
strict = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
install_types = true
non_interactive = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
ignore_missing_imports = true
allow_untyped_calls = true

[tool.isort]
known_first_party = [
    "grid_doctor",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src", "scripts"]
addopts = "-v --cov=grid_doctor --cov-report=term-missing"

[tool.coverage.run]
source = ["grid-doctor"]
branch = false

[tool.coverage.report]
ignore_errors = false
exclude_lines = [
    "pragma: no cover",
    "noqa",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
     "except ImportError:",
]

[tool.codespell]
ignore-words-list = "te,nd,fo,ist,orcestra,cdo,COO"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = docs, types, lint
[testenv]
passenv = *
parallel_show_output = false

[testenv:lint]
description = "Check code quality."
deps = -e .
       black
       isort
       flake8
       pydocstyle
       codespell
       bandit[toml]
commands =
    python3 -m isort --check --profile black -t py312 -l 79 src
    python3 -m flake8 src --count --max-complexity=10 --ignore=F405,F403,E704,W503,C901 --max-line-length=120 --statistics --show-source
    codespell {posargs: --quiet-level=2} src/
    python3 -m pydocstyle src/grid_doctor
    bandit -r src/grid_doctor --severity-level medium --confidence-level high
[testenv:test]
setenv =
    VIRTUALENV_SYSTEM_SITE_PACKAGES=true
description = "Run the unit tests."
deps = -e .[tests]
commands =
    python3 -m pytest -vv --cov=grid_doctor --cov-report=html:coverage_report --junitxml report.xml --cov-report xml tests/
    python3 -m coverage report --fail-under=65 --precision=2

[testenv:docs]
description = Build the documentation with mkdocs
deps =
    -e .[docs]
    codespell
commands =
    codespell {posargs: --quiet-level=2} docs
    mkdocs build --strict {posargs}

[testenv:docs-serve]
description = Serve the documentation locally for preview
deps =
    {[testenv:docs]deps}
commands =
    mkdocs serve {posargs}

[testenv:types]
description = Run mypy in strict mode
deps = -e .
    mypy>=1.11
    types-requests
    numpy
    xarray
commands =
    mypy src/grid_doctor
"""
